Changes Name Or Link Projects

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
               <a href="https://github.com/MrSobhan"><button><i class="bi bi-github"></i></button></a>
               <a href="#"><button><i class="bi bi-instagram"></i></button></a>
               <a href="https://t.me/soobhhan"><button><i class="bi bi-telegram"></i></button></a>
-              <a href="https://www.linkedin.com/in/sobhan-musazadeh-90616628b"><button><i class="bi bi-linkedin"></i></button></a>
+              <a href="https://www.linkedin.com/in/sobhan-musazadeh-90616628b"><button><i
+                    class="bi bi-linkedin"></i></button></a>
             </div>
           </div>
 
@@ -206,15 +207,17 @@
                 src="https://camo.githubusercontent.com/e4f019c0540e05488b4d7b316faf42387db9ea0be248ffaf5c0df0393970f8d3/68747470733a2f2f7333302e7069636f66696c652e636f6d2f66696c652f383437333834313933342f332e6a7067"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
-                برنامه نویس موبایل
+                یادداشت افسانه ای
               </p>
               <p class="text-sm danaR text-gray-400 text-center mt-5">
-                سایت فروشگاهی
+                سایت کاربردی
               </p>
-              <button
-                class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
-                مشاهده وبسایت
-              </button>
+              <a href="https://github.com/MrSobhan/NoteLegendary">
+                <button
+                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
+                  مشاهده وبسایت
+                </button>
+              </a>
             </div>
           </div>
           <div class="swiper-slide">
@@ -224,15 +227,17 @@
                 src="https://camo.githubusercontent.com/bbaa6c9d28e52b7c80b256eba43de52c56fe0d23ed691951f295000dfc59da47/68747470733a2f2f7333302e7069636f66696c652e636f6d2f66696c652f383437333837373339322f382e6a7067"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
-                برنامه نویس موبایل
+                غذا های ایرانی و جذاب
               </p>
               <p class="text-sm danaR text-gray-400 text-center mt-5">
                 سایت فروشگاهی
               </p>
-              <button
-                class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
-                مشاهده وبسایت
-              </button>
+              <a href="https://github.com/MrSobhan/FoodieMaster">
+                <button
+                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
+                  مشاهده وبسایت
+                </button>
+              </a>
             </div>
           </div>
           <div class="swiper-slide">
@@ -242,15 +247,17 @@
                 src="https://camo.githubusercontent.com/5541c30c3a65178a68659d097f33d2bf207b736ab7aaca6e5ffcc55edf034333/68747470733a2f2f7333312e7069636f66696c652e636f6d2f66696c652f383437333837373338342f372e6a7067"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
-                برنامه نویس موبایل
+                برترین بازی های 2022
               </p>
               <p class="text-sm danaR text-gray-400 text-center mt-5">
-                سایت فروشگاهی
+                سایت کاربردی
               </p>
-              <button
-                class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
-                مشاهده وبسایت
-              </button>
+              <a href="https://github.com/MrSobhan/LegendaryGame">
+                <button
+                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
+                  مشاهده وبسایت
+                </button>
+              </a>
             </div>
           </div>
           <div class="swiper-slide">
@@ -260,15 +267,17 @@
                 src="https://camo.githubusercontent.com/a8f3333367a28cc8a043f76984a36d6013c89887c7ce6e1ca53bb1ef0f1a8826/68747470733a2f2f7333312e7069636f66696c652e636f6d2f66696c652f383437333837373337362f362e6a7067"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
-                برنامه نویس موبایل
+                آکادمی آموزشی کدلرن
               </p>
               <p class="text-sm danaR text-gray-400 text-center mt-5">
                 سایت فروشگاهی
               </p>
-              <button
-                class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
-                مشاهده وبسایت
-              </button>
+              <a href="https://github.com/MrSobhan/CodeLearn">
+                <button
+                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
+                  مشاهده وبسایت
+                </button>
+              </a>
             </div>
           </div>
           <div class="swiper-slide">
@@ -278,15 +287,17 @@
                 src="https://camo.githubusercontent.com/dfc1766c0619cb012a7de8a16122dc2517a4a42325ea99ab1da8d0af0e667c99/68747470733a2f2f7333302e7069636f66696c652e636f6d2f66696c652f383437333837373336382f352e6a7067"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
-                برنامه نویس موبایل
+                کافه کوک
               </p>
               <p class="text-sm danaR text-gray-400 text-center mt-5">
                 سایت فروشگاهی
               </p>
-              <button
-                class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
-                مشاهده وبسایت
-              </button>
+              <a href="https://github.com/MrSobhan/Cofe_Cook">
+                <button
+                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
+                  مشاهده وبسایت
+                </button>
+              </a>
             </div>
           </div>
           <div class="swiper-slide">
@@ -296,15 +307,17 @@
                 src="https://camo.githubusercontent.com/2525eced7a058483a1dd267c6e6d7841b432986eb5241090978a15f991e4d073/68747470733a2f2f7333302e7069636f66696c652e636f6d2f66696c652f383437333834323437362f342e6a7067"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
-                برنامه نویس موبایل
+                پنل مدیریت فروشگاهی
               </p>
               <p class="text-sm danaR text-gray-400 text-center mt-5">
-                سایت فروشگاهی
+                سایت کاربردی
               </p>
-              <button
-                class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
-                مشاهده وبسایت
-              </button>
+              <a href="https://github.com/MrSobhan/Cms-Project-php">
+                <button
+                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
+                  مشاهده وبسایت
+                </button>
+              </a>
             </div>
           </div>
         </div>
