--- a/index.html
+++ b/index.html
@@ -224,7 +224,87 @@
             <div class="flex flex-col items-center justify-evenly cart pb-5 rounded-3xl [&>*]:mx-5 z-0 p-3"
               data-aos="flip-right" data-aos-delay="50">
               <img
-                src="https://camo.githubusercontent.com/e4f019c0540e05488b4d7b316faf42387db9ea0be248ffaf5c0df0393970f8d3/68747470733a2f2f7333302e7069636f66696c652e636f6d2f66696c652f383437333834313933342f332e6a7067"
+                src="https://s32.picofile.com/file/8479456268/s3030Divar.png"
+                alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
+              <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
+                دیوار
+              </p>
+              <p class="text-sm danaR text-gray-400 text-center mt-5">
+                سایت آگهی محصول
+              </p>
+              <a href="https://divardev.vercel.app">
+                <button
+                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
+                  مشاهده وبسایت
+                </button>
+              </a>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="flex flex-col items-center justify-evenly cart pb-5 rounded-3xl [&>*]:mx-5 z-0 p-3"
+              data-aos="flip-right" data-aos-delay="50">
+              <img
+                src="https://s33.picofile.com/file/8484711326/Screenshot_2025_05_26_214525.png"
+                alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
+              <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
+                کاراینجا
+              </p>
+              <p class="text-sm danaR text-gray-400 text-center mt-5">
+                سایت کاریاب هوشمند
+              </p>
+              <a href="https://karinja-gold.vercel.app">
+                <button
+                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
+                  مشاهده وبسایت
+                </button>
+              </a>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="flex flex-col items-center justify-evenly cart pb-5 rounded-3xl [&>*]:mx-5 z-0 p-3"
+              data-aos="flip-right" data-aos-delay="50">
+              <img
+                src="https://s33.picofile.com/file/8484711292/Screenshot_2025_05_26_214617.png"
+                alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
+              <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
+                سوارینا
+              </p>
+              <p class="text-sm danaR text-gray-400 text-center mt-5">
+                سایت کرایه خودرو
+              </p>
+              <a href="https://savarina.vercel.app">
+                <button
+                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
+                  مشاهده وبسایت
+                </button>
+              </a>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="flex flex-col items-center justify-evenly cart pb-5 rounded-3xl [&>*]:mx-5 z-0 p-3"
+              data-aos="flip-right" data-aos-delay="50">
+              <img
+                src="https://s30.picofile.com/file/8473841250/2.jpg"
+                alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
+              <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
+                سایت آموزشی تیچی
+              </p>
+              <p class="text-sm danaR text-gray-400 text-center mt-5">
+                سایت آموزشی
+              </p>
+              <a href="https://github.com/MrSobhan/ReactJs-Project">
+                <button
+                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
+                  مشاهده وبسایت
+                </button>
+              </a>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="flex flex-col items-center justify-evenly cart pb-5 rounded-3xl [&>*]:mx-5 z-0 p-3"
+              data-aos="flip-right" data-aos-delay="50">
+              <img
+                src="https://s30.picofile.com/file/8473841934/3.jpg"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
                 یادداشت افسانه ای
@@ -244,7 +324,7 @@
             <div class="flex flex-col items-center justify-evenly cart pb-5 rounded-3xl [&>*]:mx-5 z-0 p-3"
               data-aos="flip-right" data-aos-delay="150">
               <img
-                src="https://camo.githubusercontent.com/bbaa6c9d28e52b7c80b256eba43de52c56fe0d23ed691951f295000dfc59da47/68747470733a2f2f7333302e7069636f66696c652e636f6d2f66696c652f383437333837373339322f382e6a7067"
+                src="https://s30.picofile.com/file/8473877392/8.jpg"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
                 غذا های ایرانی و جذاب
@@ -262,29 +342,9 @@
           </div>
           <div class="swiper-slide">
             <div class="flex flex-col items-center justify-evenly cart pb-5 rounded-3xl [&>*]:mx-5 z-0 p-3"
-              data-aos="flip-right" data-aos-delay="250">
-              <img
-                src="https://camo.githubusercontent.com/5541c30c3a65178a68659d097f33d2bf207b736ab7aaca6e5ffcc55edf034333/68747470733a2f2f7333312e7069636f66696c652e636f6d2f66696c652f383437333837373338342f372e6a7067"
-                alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
-              <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
-                برترین بازی های 2022
-              </p>
-              <p class="text-sm danaR text-gray-400 text-center mt-5">
-                سایت کاربردی
-              </p>
-              <a href="https://github.com/MrSobhan/LegendaryGame">
-                <button
-                  class="px-5 py-3 rounded-xl shadow-2xl bg-colBg text-gray-100 mt-7 danaR hover:scale-90 transition-all">
-                  مشاهده وبسایت
-                </button>
-              </a>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="flex flex-col items-center justify-evenly cart pb-5 rounded-3xl [&>*]:mx-5 z-0 p-3"
               data-aos="flip-right" data-aos-delay="350">
               <img
-                src="https://camo.githubusercontent.com/a8f3333367a28cc8a043f76984a36d6013c89887c7ce6e1ca53bb1ef0f1a8826/68747470733a2f2f7333312e7069636f66696c652e636f6d2f66696c652f383437333837373337362f362e6a7067"
+                src="https://s31.picofile.com/file/8473877376/6.jpg"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
                 آکادمی آموزشی کدلرن
@@ -304,7 +364,7 @@
             <div class="flex flex-col items-center justify-evenly cart pb-5 rounded-3xl [&>*]:mx-5 z-0 p-3"
               data-aos="flip-right" data-aos-delay="450">
               <img
-                src="https://camo.githubusercontent.com/dfc1766c0619cb012a7de8a16122dc2517a4a42325ea99ab1da8d0af0e667c99/68747470733a2f2f7333302e7069636f66696c652e636f6d2f66696c652f383437333837373336382f352e6a7067"
+                src="https://s30.picofile.com/file/8473877368/5.jpg"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
                 کافه کوک
@@ -324,7 +384,7 @@
             <div class="flex flex-col items-center justify-evenly cart pb-5 rounded-3xl [&>*]:mx-5 z-0 p-3"
               data-aos="flip-right" data-aos-delay="550">
               <img
-                src="https://camo.githubusercontent.com/2525eced7a058483a1dd267c6e6d7841b432986eb5241090978a15f991e4d073/68747470733a2f2f7333302e7069636f66696c652e636f6d2f66696c652f383437333834323437362f342e6a7067"
+                src="https://s30.picofile.com/file/8473842476/4.jpg"
                 alt="" class="rounded-3xl mx-0 hover:opacity-50 transition-all" />
               <p class="text-xl danaB text-gray-100 cursor-pointer transition-all hover:-translate-y-2 mt-8">
                 پنل مدیریت فروشگاهی
